# Tetra

./: .gitignore  cf-client.py  config.example.yaml  l4-dp-client.py  pyproject.toml  requirements.txt  setup.py
tetra/: config.example.yaml  dnsutils.py  tetra.py
tetra/backends/: cloudflare.py  dnspod.py
