[project]
name = "tetra"
version = "1.0.0"
description = "DNS Record Manager following Dict's 4-layer Model"
authors = [
    { name="Dict Xiong", email="me@beardic.cn" }
]
requires-python = ">=3.7"

dependencies = [
    "pyyaml",
    "dnspython",
    "cloudflare",
    "tencentcloud-sdk-python",
    "tqdm"
]

[project.scripts]
tetra = "tetra.tetra:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
